--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "custom_data_preprocessing/Self-Correction-Human-Parsing"]
 	path = custom_data_preprocessing/Self-Correction-Human-Parsing
 	url = https://github.com/GoGoDuck912/Self-Correction-Human-Parsing
+[submodule "custom_data_preprocessing/one-click-dense-pose"]
+	path = custom_data_preprocessing/one-click-dense-pose
+	url = https://github.com/sanjay-29-29/one-click-dense-pose
